Reescrevendo o  alt no logo

--- a/Views/Partials/_sidebar.hbs
+++ b/Views/Partials/_sidebar.hbs
@@ -30,7 +30,7 @@
 <aside class="sidenav" >
     <button class="close">Fechar</button>
     <div class="logo">
-        <a  href="/"><img src="/Imagens/logo-ally.svg" alt="Voltar para página inicial"></a>
+        <a  href="/"><img src="/Imagens/logo-ally.svg" alt="Logo do Ally"></a>
     </div>
     <nav id="menu" class="main-nav" aria-label="Navegação principal">
         <ul class="navList">
