Ajustes pagina tester

--- a/Views/homepage.hbs
+++ b/Views/homepage.hbs
@@ -22,7 +22,7 @@
          {{!-- navbar --}}
         <nav class="main-nav" aria-label="Navegação principal">
             <div class="logo">
-                <a href="/" title="Página inicial"><img src="Imagens/logo-ally.svg" alt="Logo Ally"></a>
+                <a href="/" title="Página inicial"><img src="Imagens/logo-ally.svg" alt="Logo escrito Ally em caixa baixa, com um circulo rosa próximo a letra A e outro círculo azul acima da letra Y"></a>
             </div>
 
             {{!-- menu --}}
