--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -18,12 +18,13 @@
     {{#if tester}}
     {{!-- skip links --}}
     <ul class="skip-links">
-        <li><a href="#menu">Pular para menu</a></li>
-        <li> <a href="{{teste.url}}" target="_blank">Abrir URL para testar (em outra aba)</a></li>
         <li>
             <button class="hoverButton share-button" onclick="{swap()}">
                 Compartilhar tela
             </button></li>
+        <li><a href="#menu">Pular para menu</a></li>
+        <li> <a href="{{teste.url}}" target="_blank">Abrir URL para testar (em outra aba)</a></li>
+
         <li><a href="#rodape">Pular para rodapé</a></li>
     </ul>
     {{!-- / skip links --}}
@@ -97,13 +98,14 @@
                             <button class="hoverButton" onclick="{muteMicrophone()}">
                                 <span id="mic-icon" class="fas fa-microphone fa-xs"></span>
                             </button>
-                            <div class="HoverState" id="mic-text"tabindex='1'>Mutar</div>
+                            <div class="HoverState" id="mic-text" tabindex='1'>Mutar</div>
                         </div>
                         <div class="buttonContainer">
                             <button class="hoverButton" id="share-button" onclick="{swap()}">
                                 <span id="swap-icon" class="fas fa-desktop fa-xs"></span>
                             </button>
-                            <div class="HoverState" id="swap-text" tabindex='1'>Compartilhar Tela (quando clicado sua tela
+                            <div class="HoverState" id="swap-text" tabindex='1'>Compartilhar Tela (quando clicado sua
+                                tela
                                 começará a ser
                                 gravada)</div>
                         </div>
@@ -138,8 +140,8 @@
 
 
         {{else}}
-        {{> _skip_links}}           
-        
+        {{> _skip_links}}
+
         <div id="dashboard">
             <!-- header -->
             <header class="headerDashboard">
@@ -153,7 +155,7 @@
             <!-- /header -->
 
 
-           
+
             {{> _sidebar}}
 
 
