--- a/Views/Partials/_skip_links.hbs
+++ b/Views/Partials/_skip_links.hbs
@@ -2,6 +2,6 @@
 <ul class="skip-links">
     <li><a href="#menu">Pular para menu</a></li>
     <li><a href="#conteudo">Pular para conteúdo</a></li>
-    <li><a href="#rodape">Pular para rodapé</a></li>
+    {{!-- <li><a href="#rodape">Pular para rodapé</a></li> --}}
 </ul>
 {{!-- / skip links --}}
