--- a/Views/Partials/_convites.hbs
+++ b/Views/Partials/_convites.hbs
@@ -68,9 +68,9 @@
 
                     {{#each convites as |convite|}}
                     <tr>
-                        <td>{{convite.testeNome}}Teste Thais</td>
-                        <td>17/11/2020</td>
-                        <td>17:50</td>
+                        <td>{{convite.testeNome}}</td>
+                        <td>21/11/2020</td>
+                        <td>16:10</td>
                         <td class="btn-action">
                             <a class="blue" title="Abrir outra página com informações do teste"
                                 href="/testes/{{convite.testeId}}/info">Aceitar</a>
