--- a/Views/infoTeste.hbs
+++ b/Views/infoTeste.hbs
@@ -85,7 +85,7 @@
                         <li>Quando compartilhar a tela, a mesma começara a ser gravada automaticamente.</li>
                     </ul>
 
-                    <p>O site a ser testado:<a class="url" href="teste.url">{{teste.url}}</a></p><br>
+                    <p>O site a ser testado:<a class="url" href="{{teste.url}}">{{teste.url}}</a></p><br>
                     
                     <a class="btn-cta" href="chamada">Ir para videochamada</a>
 
