--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -32,8 +32,8 @@
                 <h1>Entrar</h1>
                 <form action="/users/login" method="POST">
                     <div class="campo">
-                        <label for="email">Email</label>
-                        <input id="email" type="email" name='email' placeholder="Insira seu e-mail">
+                        <label for="nome">Nome</label>
+                        <input id="nome" type="nome" name='nome' placeholder="Insira seu nome">
                     </div>
                     <div class="campo">
 
