--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -33,7 +33,7 @@
                 <form action="/users/login" method="POST">
                     <div class="campo">
                         <label for="nome">Nome</label>
-                        <input id="nome" type="nome" name='nome' placeholder="Insira seu nome">
+                        <input id="nome" type="text" name='nome' placeholder="Insira seu nome">
                     </div>
                     <div class="campo">
 
