adicionando flash messages

--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -32,8 +32,8 @@
                 <h1>Entrar</h1>
                 <form action="/users/login" method="POST">
                     <div class="campo">
-                        <label for="nome">Nome</label>
-                        <input id="nome" type="text" name='nome' placeholder="Insira seu nome">
+                        <label for="username">Nome do Usuário</label>
+                        <input id="username" type="text" name='username' placeholder="Insira seu username">
                     </div>
                     <div class="campo">
 
@@ -63,9 +63,7 @@
                 </div>
             </div>
         </section>
-
     </main>
-
 <noscript>Seu navegador não dá suporte a javascript</noscript>  
     <script>
 
