--- a/Views/register.hbs
+++ b/Views/register.hbs
@@ -30,6 +30,7 @@
 
 
     <main>
+        {{> _erros this}}
         <section id="loginSection">
             <div class="container">
                 <h1>Crie uma Conta</h1>
@@ -44,6 +45,10 @@
                             <label for="nome">Nome</label>
                             <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
                                 value='{{tipoDiferente nome 'undefined'}}'>
+                        </div>
+                        <div class="campo">
+                            <label for="username">Nome de usuario (você usará esse nome para fazer o login)</label>
+                            <input placeholder="Você usará esse nome do usuário para fazer o login" id="username" type="text" name='username'>
                         </div>
                         <div class="campo">
                             <label for="email">Email</label>
@@ -96,6 +101,11 @@
                         <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
                             value='{{tipoDiferente nome 'undefined'}}'>
                     </div>
+                    <div class="campo">
+                        <label for="username">Nome de usuario (você usará esse nome para fazer o login)</label>
+                        <input placeholder="Você usará esse nome do usuário para fazer o login" id="username" type="text" name='username'
+                                value='{{tipoDiferente username 'undefined'}}'>
+                        </div>
                     <div class="campo">
                         <label for="email">Email</label>
                         <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
