Adicionado notificação de  erros na hora de criar conta

--- a/Views/Testes/convidarTesters.hbs
+++ b/Views/Testes/convidarTesters.hbs
@@ -22,7 +22,7 @@
             <button class="menutoggle" aria-expanded="false">Menu</button>
             <h1>Convidar Testers</h1>
             <div class="utilities">
-                <span class="user">Olá {{user.nome}}!</span>
+                <span class="user">Olá {{nome}}!</span>
                 <a tabindex="0" class="logout" href="/users/logout">Sair</a>
             </div>
         </header>
