--- a/Views/Testes/teste.hbs
+++ b/Views/Testes/teste.hbs
@@ -82,7 +82,7 @@
                     <div class="info-main">
                         <div class="nome">
                             <h2> {{teste.nome}}</h2>
-                            <h3 class="url">URL - {{teste.url}}</h3>
+                            <h3 target="_blank"  class="url">URL - {{teste.url}}</h3>
                         </div>
 
 
