--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -27,6 +27,7 @@
         </a>
     </header>
     <main id="conteudo">
+        {{> _erros this}}
         <section id="loginSection">
             <div class="container">
                 <h1>Entrar</h1>
