--- a/Views/register.hbs
+++ b/Views/register.hbs
@@ -162,6 +162,7 @@
 
 
     <noscript>Seu navegador não dá suporte a javascript</noscript>
+    <script src="/Javascript/erroflash.js"></script>
     <script>
         var inputPass3 = document.getElementById('senha'),
             inputPass4 = document.getElementById('senha2'),
