--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -15,6 +15,7 @@
 @import "partials/convidarTesters";
 @import "partials/dashboardTester";
 @import "partials/contato";
+@import "partials/orientacoes";
 @import "partials/mediasqueries";
 @import "partials/erro";
 
