--- a/Views/infoTeste.hbs
+++ b/Views/infoTeste.hbs
@@ -59,7 +59,7 @@
 
 
 
-        <main id="conteudo">
+        <main id="conteudo"  accesskey="1">
             <!-- breadcrumbs -->
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
