--- a/Public/CSS/sass/partials/_footer.scss
+++ b/Public/CSS/sass/partials/_footer.scss
@@ -1,26 +1,51 @@
 .footer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-gap: 30px 10px;
-    margin: 4rem 3rem;
-    .footer-nav {
-      display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-gap: 30px 10px;
+  margin: 4rem 3rem;
+  .footer-nav {
+    display: flex;
+    margin-top: 30px;
+  }
+
+  .logo {
+    padding-right: 20rem;
+  }
+
+  .col {
+    margin: 0 3.5rem;
+    .title {
+      font-weight: 900;
+      margin-bottom: 20px;
+      color: var(--color-black);
+      font-size: 16px !important;
     }
-  
-    .logo {
-      padding-right: 20rem;
+
+    ul li {
+      margin-top: 5px;
+      transition: 1s;
+      a {
+        color: var(--color-black);
+        font-size: 16px !important;
+        
+      }
+
+    
+
+     
     }
-  
-    .col {
-      margin: 0 3.5rem;
-      p {
-        font-weight: 900;
-        margin-bottom: 10px;
-      }
-  
-      ul li {
-        margin-bottom: 10px;
-      }
+
+    a:after {
+      border-bottom: 3px solid var(--color-blue);
+      content: "";
+      display: block;
+      margin: 0.25em  0;
+      transition: width 150ms ease-in-out 0s;
+      width: 0;
+    }
+    a:hover:after {
+      transition: width 50ms ease-in-out 0s;
+      width: 90%;
     }
   }
-  
+}
