--- a/Public/CSS/sass/partials/_navbar.scss
+++ b/Public/CSS/sass/partials/_navbar.scss
@@ -1,63 +1,71 @@
-
-.logo img {
-  max-width: 100px;
+.logo {
+  img {
+    min-width: 80px;
+    margin-left: 10px;
+  }
 }
-#headerHome, #headerTester {
-nav.main-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 1.5rem;
 
-  ul#menu {
-    display: flex;
-    margin-right: auto;
-    margin-left: 5rem;
-
-    li a {
-      padding: 0 1rem;
-      color: var(--color-black);
-      font-weight: 500;
-    }
-
-    li:after {
-      border-bottom: 3px solid var(--color-blue);
-      content: "";
-      display: block;
-      margin: 0.25em auto 0;
-      transition: width 150ms ease-in-out 0s;
-      width: 0;
-      
-    }
-    li:hover:after {
-      transition: width 50ms ease-in-out 0s;
-      width: 80%;
-  
-    }
-
-    .highlight {
-      padding: 6px 8px;
-      border-radius: 5px;
-      background: #efecff;
-      margin-left: 1rem;
-      transition: 0.5s;
-
-      &:hover {
-        background: none;
-        transition: 0.2s;
-      }
+#headerHome,
+#headerTester {
+  .logo {
+    img {
+      min-width: 80px;
+      margin-left: 10px;
     }
   }
-  
-  .menu-toggle {
-   display: none;
-  }
 
-  .menu-section {
+  nav.main-nav {
     display: flex;
     align-items: center;
-    width: 100%;
-  }
-}
+    justify-content: space-between;
+    padding-top: 1.5rem;
 
+    ul#menu {
+      display: flex;
+      margin-right: auto;
+      margin-left: 5rem;
+
+      li a {
+        padding: 0 1rem;
+        color: var(--color-black);
+        font-weight: 500;
+      }
+
+      li:after {
+        border-bottom: 3px solid var(--color-blue);
+        content: "";
+        display: block;
+        margin: 0.25em auto 0;
+        transition: width 150ms ease-in-out 0s;
+        width: 0;
+      }
+      li:hover:after {
+        transition: width 50ms ease-in-out 0s;
+        width: 80%;
+      }
+
+      .highlight {
+        padding: 6px 8px;
+        border-radius: 5px;
+        background: #efecff;
+        margin-left: 1rem;
+        transition: 0.5s;
+
+        &:hover {
+          background: none;
+          transition: 0.2s;
+        }
+      }
+    }
+
+    .menu-toggle {
+      display: none;
+    }
+
+    .menu-section {
+      display: flex;
+      align-items: center;
+      width: 100%;
+    }
+  }
 }
