--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -35,6 +35,10 @@ a {
   text-decoration: none;
 }
 
+a:focus {
+  border: 4px solid var(--color-blue);
+}
+
 img {
   max-width: 100%;
 }
@@ -43,7 +47,8 @@ button {
   cursor: pointer;
 }
 
-.home h2, .tester h2 {
+.home h2,
+.tester h2 {
   margin: 0 30rem 3rem;
   font-size: 3.2rem;
   text-align: center;
@@ -51,8 +56,9 @@ button {
 
 .container {
   margin: auto;
-  width: 90%;
-  max-width: 1200px;
+  width: 100%;
+  max-width: 1208px;
+  padding: 0 10px;
 }
 
 .container-fluid {
@@ -103,7 +109,8 @@ button {
   padding: 0 6rem 0 12rem;
 }
 
-.skip-links a, .skip-links button {
+.skip-links a,
+.skip-links button {
   position: absolute;
   top: -3rem;
   background: var(--color-white);
@@ -111,7 +118,8 @@ button {
   color: #000;
 }
 
-.skip-links a:focus, .skip-links button:focus {
+.skip-links a:focus,
+.skip-links button:focus {
   display: block;
   top: 0.2rem;
   z-index: 999;
@@ -121,7 +129,7 @@ button {
   color: white;
   width: 100%;
   font-size: 16px;
-  border: 0;
+  border: 2px solid var(--color-blue);
   position: relative;
 }
 
@@ -239,10 +247,6 @@ header#logoLogin img {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
-}
-
-#loginSection .container form .campo input[type="submit"]:focus {
-  outline: none;
 }
 
 #loginSection .container form .campo input[type="submit"]:hover {
@@ -523,10 +527,23 @@ header#logoLogin img {
 }
 
 .logo img {
-  max-width: 100px;
+  min-width: 80px;
+  margin-left: 10px;
 }
 
-#headerHome nav.main-nav, #headerTester nav.main-nav {
+#headerHome .logo a:focus,
+#headerTester .logo a:focus {
+  padding-top: 60px !important;
+}
+
+#headerHome .logo img,
+#headerTester .logo img {
+  min-width: 80px;
+  margin-left: 10px;
+}
+
+#headerHome nav.main-nav,
+#headerTester nav.main-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -539,7 +556,8 @@ header#logoLogin img {
   padding-top: 1.5rem;
 }
 
-#headerHome nav.main-nav ul#menu, #headerTester nav.main-nav ul#menu {
+#headerHome nav.main-nav ul#menu,
+#headerTester nav.main-nav ul#menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -547,13 +565,15 @@ header#logoLogin img {
   margin-left: 5rem;
 }
 
-#headerHome nav.main-nav ul#menu li a, #headerTester nav.main-nav ul#menu li a {
+#headerHome nav.main-nav ul#menu li a,
+#headerTester nav.main-nav ul#menu li a {
   padding: 0 1rem;
   color: var(--color-black);
   font-weight: 500;
 }
 
-#headerHome nav.main-nav ul#menu li:after, #headerTester nav.main-nav ul#menu li:after {
+#headerHome nav.main-nav ul#menu li:after,
+#headerTester nav.main-nav ul#menu li:after {
   border-bottom: 3px solid var(--color-blue);
   content: "";
   display: block;
@@ -563,13 +583,15 @@ header#logoLogin img {
   width: 0;
 }
 
-#headerHome nav.main-nav ul#menu li:hover:after, #headerTester nav.main-nav ul#menu li:hover:after {
+#headerHome nav.main-nav ul#menu li:hover:after,
+#headerTester nav.main-nav ul#menu li:hover:after {
   -webkit-transition: width 50ms ease-in-out 0s;
   transition: width 50ms ease-in-out 0s;
   width: 80%;
 }
 
-#headerHome nav.main-nav ul#menu .highlight, #headerTester nav.main-nav ul#menu .highlight {
+#headerHome nav.main-nav ul#menu .highlight,
+#headerTester nav.main-nav ul#menu .highlight {
   padding: 6px 8px;
   border-radius: 5px;
   background: #efecff;
@@ -578,17 +600,20 @@ header#logoLogin img {
   transition: 0.5s;
 }
 
-#headerHome nav.main-nav ul#menu .highlight:hover, #headerTester nav.main-nav ul#menu .highlight:hover {
+#headerHome nav.main-nav ul#menu .highlight:hover,
+#headerTester nav.main-nav ul#menu .highlight:hover {
   background: none;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
-#headerHome nav.main-nav .menu-toggle, #headerTester nav.main-nav .menu-toggle {
+#headerHome nav.main-nav .menu-toggle,
+#headerTester nav.main-nav .menu-toggle {
   display: none;
 }
 
-#headerHome nav.main-nav .menu-section, #headerTester nav.main-nav .menu-section {
+#headerHome nav.main-nav .menu-section,
+#headerTester nav.main-nav .menu-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -601,6 +626,11 @@ header#logoLogin img {
 #headerHome {
   background: url(../../../Imagens/bg-home.svg) no-repeat center center/cover;
   padding-bottom: 4rem;
+}
+
+.contato {
+  background: none !important;
+  padding-bottom: 1rem !important;
 }
 
 #bannerHome {
@@ -660,7 +690,8 @@ header#logoLogin img {
 }
 
 .home #como-funciona img {
-  max-width: 320px;
+  width: 320px;
+  max-width: 100%;
   margin: 10px auto;
 }
 
@@ -670,7 +701,7 @@ header#logoLogin img {
 }
 
 .home #como-funciona p {
-  padding: 10px 50px;
+  padding: 10px 30px;
   line-height: 1.5;
 }
 
@@ -867,8 +898,8 @@ header#logoLogin img {
 .footer {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-gap: 30px 10px;
   margin: 4rem 3rem;
 }
@@ -877,6 +908,7 @@ header#logoLogin img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 30px;
 }
 
 .footer .logo {
@@ -887,13 +919,38 @@ header#logoLogin img {
   margin: 0 3.5rem;
 }
 
-.footer .col p {
+.footer .col .title {
   font-weight: 900;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  color: var(--color-black);
+  font-size: 16px !important;
 }
 
 .footer .col ul li {
-  margin-bottom: 10px;
+  margin-top: 5px;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.footer .col ul li a {
+  color: var(--color-black);
+  font-size: 16px !important;
+}
+
+.footer .col a:after {
+  border-bottom: 3px solid var(--color-blue);
+  content: "";
+  display: block;
+  margin: 0.25em  0;
+  -webkit-transition: width 150ms ease-in-out 0s;
+  transition: width 150ms ease-in-out 0s;
+  width: 0;
+}
+
+.footer .col a:hover:after {
+  -webkit-transition: width 50ms ease-in-out 0s;
+  transition: width 50ms ease-in-out 0s;
+  width: 90%;
 }
 
 #dashboard {
@@ -2766,6 +2823,7 @@ div#addTesteFinalizadoContainer div#addTesteFinalizado div[role='button'] a {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-bottom: 6.2rem;
+  margin-bottom: 5rem;
 }
 
 .convidarTestersContainer div#testersTable div#testersTableHeader {
@@ -2789,10 +2847,6 @@ div#addTesteFinalizadoContainer div#addTesteFinalizado div[role='button'] a {
 
 .convidarTestersContainer div#testersTable div#testersTableHeader div.testersTableTile {
   width: 20%;
-}
-
-.convidarTestersContainer div#testersTable ul {
-  margin-bottom: 5rem;
 }
 
 .convidarTestersContainer div#testersTable ul li#tr {
@@ -2828,18 +2882,14 @@ div#addTesteFinalizadoContainer div#addTesteFinalizado div[role='button'] a {
   cursor: pointer;
 }
 
-.convidarTestersContainer div#testersTable ul li#tr div button:focus {
-  outline: none;
-}
-
-.convidarTestersContainer div#testersTable ul li#tr div button:hover {
+.convidarTestersContainer div#testersTable ul li#tr div:hover {
   background: #3B1AE3;
   color: #fff;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
-.convidarTestersContainer div#testersTable div[role='button'] {
+.convidarTestersContainer div[role='button'] {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2859,7 +2909,7 @@ div#addTesteFinalizadoContainer div#addTesteFinalizado div[role='button'] a {
   margin-right: 2.5rem;
 }
 
-.convidarTestersContainer div#testersTable div[role='button'] a {
+.convidarTestersContainer div[role='button'] a {
   font-weight: 700;
   font-size: 1.8rem;
   color: white;
@@ -3346,17 +3396,15 @@ main.contato figure img {
   html {
     font-size: 50%;
   }
-  p {
-    font-size: 2rem !important;
+  p, a {
+    font-size: 18px !important;
   }
   .home h2,
   .tester h2 {
     margin: 0 1rem 0;
   }
-  .headerHome #menu,
-  .headerHome .account,
-  .headerTester #menu,
-  .headerTester .account {
+  .main-nav #menu,
+  .main-nav .account {
     display: none !important;
   }
   .menu-section {
@@ -3371,8 +3419,8 @@ main.contato figure img {
     background: var(--color-white);
     font-size: 2.5rem;
     font-weight: 900;
-    border: 0;
-    border-radius: 2px;
+    border: 2px solid var(--color-blue);
+    border-radius: 5px;
     cursor: pointer;
   }
   /* fullscreen */
@@ -3409,18 +3457,20 @@ main.contato figure img {
   }
   .menu-section.on #menu {
     padding-top: 10rem;
+    margin: 0  !important;
   }
   .menu-section.on #menu li a,
   .menu-section.on .account a {
-    -webkit-transition-duration: 0.5s;
-            transition-duration: 0.5s;
-    font-size: 3rem;
-    line-height: 1.8;
-    display: block;
-    color: var(--color-white);
-    padding: 2rem 0;
-    margin-left: 0;
+    -webkit-transition-duration: 0.5s !important;
+            transition-duration: 0.5s !important;
+    font-size: 3rem !important;
+    line-height: 1.8 !important;
+    display: block !important;
+    color: var(--color-white) !important;
+    padding: 2rem 0 !important;
+    margin-left: 0 !important;
     border-radius: 0 !important;
+    font-weight: 700 !important;
   }
   .menu-section.on #menu li a:hover,
   .menu-section.on .account a:hover {
@@ -3439,7 +3489,8 @@ main.contato figure img {
 
 @media (max-width: 540px) {
   #bannerHome img {
-    max-width: 410px;
+    width: 410px;
+    max-width: 100%;
     margin: auto;
   }
   #bannerHome .banner-text {
@@ -3447,6 +3498,9 @@ main.contato figure img {
   }
   #bannerHome h1 {
     font-size: 3.5rem;
+  }
+  #bannerTester {
+    text-align: center;
   }
   #call-to-action img {
     display: none;
@@ -3458,5 +3512,26 @@ main.contato figure img {
     text-align: center;
     margin-left: 0;
     margin-bottom: 5rem;
+  }
+  #loginSection .container {
+    overflow-x: hidden;
+    width: 100vw;
+    padding: 20px;
+  }
+  .footer {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .footer .logo {
+    padding-right: 0;
+  }
+  .itens-motivos {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 30px 10px;
+    margin: 5rem auto;
+    padding: 0 6rem 0 12rem;
   }
 }
