--- a/Views/Partials/_skip_links.hbs
+++ b/Views/Partials/_skip_links.hbs
@@ -1,7 +1,12 @@
+
+
 {{!-- skip links --}}
 <ul class="skip-links">
     <li><a href="#menu">Pular para menu</a></li>
-    <li><a href="#conteudo">Pular para conteúdo</a></li>
-    {{!-- <li><a href="#rodape">Pular para rodapé</a></li> --}}
+    <li><a href="#conteudo">Pular para conteúdo principal</a></li>
 </ul>
 {{!-- / skip links --}}
+
+
+
+
