--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -15,8 +15,10 @@
 @import "partials/convidarTesters";
 @import "partials/dashboardTester";
 @import "partials/contato";
+@import "partials/guia";
 @import "partials/orientacoes";
 @import "partials/mediasqueries";
 @import "partials/erro";
+
 
 
