--- a/Views/Partials/_footer.hbs
+++ b/Views/Partials/_footer.hbs
@@ -13,10 +13,10 @@
 
         <nav class="footer-nav">
             <div class="col">
-                <p>Páginas</p>
+                <p class="title">Criar conta</p>
                 <ul>
-                    <li>Sobre nós</li>
-                    <li>Contato</li>
+                    <li><a href="/users/register">Quero testar meu site</a></li>
+                    <li><a href="/users/register/tester">Quero ser pago para testar </a></li>
                 </ul>
             </div>
         </nav>
