--- a/Views/homepage.hbs
+++ b/Views/homepage.hbs
@@ -84,20 +84,20 @@
 
             <div class="steps">
                 <div class="step"  data-aos="fade-right" data-aos-duration="1300">
-                    <img src="Imagens/step1.svg" alt="Ilustração de passo a passo" aria-hidden="true">
+                    <img src="Imagens/step1.svg" alt="Ilustração de conexão de pessoas" aria-hidden="true">
                     <h3>Agendamento</h3>
-                    <p>Entre em contato com os usuários e agende os testes de acessibilidade.</p>
+                    <p>Crie os testes de acessibilidade, convide os usuários e agende os testes.</p>
                 </div>
 
                 <div class="step"  data-aos="fade-up" data-aos-duration="1300">
-                    <img src="Imagens/step2.svg" alt="Ilustração de passo a passo" aria-hidden="true">
+                    <img src="Imagens/step2.svg" alt="Ilustração com duas pessoas batendo a mão" aria-hidden="true">
                     <h3>Testes em tempo real, com compartilhamento de tela</h3>
-                    <p>Entre em contato com os usuários e agende os testes de acessibilidade.</p>
+                    <p>Assim que os testes forem aceitos, você pode realizar videochamadas com os testers e visualizá-los utilizando seu site. </p>
                 </div>
                 <div class="step"  data-aos="fade-left" data-aos-duration="1300">
-                    <img src="Imagens/step3.svg" alt="Ilustração de passo a passo" aria-hidden="true">
-                    <h3>Resultado</h3>
-                    <p>Entre em contato com os usuários e agende os testes de acessibilidade.</p>
+                    <img src="Imagens/step3.svg" alt="Ilustração de duas pessoas segurando uma página web" aria-hidden="true">
+                    <h3>Visualizar gravações</h3>
+                    <p>Assim que o teste acabar, você consegue visualizar as gravações e as anotações realizadas durante a videochamada.</p>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <div class="container">
             <h2>Por onde começar a aplicar acessibilidade no meu site?</h2>
             <p>Separamos algumas dicas de como começar a <br>implantar acessibilidade Web</p>
-            <a class="btn-orientacoes" href="/">Quero saber por onde começar</a>
+            <a class="btn-orientacoes" href="/guia">Quero saber por onde começar</a>
         </div>
     </section>
     {{!-- / por onde começar --}}
