--- a/Public/CSS/sass/partials/_mediasqueries.scss
+++ b/Public/CSS/sass/partials/_mediasqueries.scss
@@ -176,6 +176,29 @@
   .highlight {
     background: none !important;
   }
+
+  #bannerGuia {
+    text-align: center;
+
+    p {
+      font-size: 22px !important;
+    }
+    img {
+      display: none;
+    }
+  }
+
+  .guia {
+    img {
+      display: none;
+    }
+
+    ul {
+      margin: 0rem 4rem 8rem 4rem;
+    }
+  }
+
+  
 }
 
 @media (max-width: 540px) {
