--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -520,6 +520,17 @@ header#logoLogin img {
   padding: 1rem 2rem;
   font-weight: 700;
   border-radius: 3em;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
+}
+
+.btn-orientacoes:hover {
+  background-color: var(--color-blue);
+  color: var(--color-white);
 }
 
 .logo img {
@@ -3337,6 +3348,81 @@ main.contato figure img {
   }
 }
 
+.bg-none {
+  background: none !important;
+}
+
+#bannerGuia {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 4rem;
+}
+
+#bannerGuia .banner-text {
+  margin-top: 5rem;
+  margin-left: 1.2rem;
+}
+
+#bannerGuia h1 {
+  padding-right: 1.2rem;
+  font-size: 5.2rem;
+  line-height: 1.3;
+  font-weight: 900;
+}
+
+#bannerGuia p {
+  margin-top: 1.5rem;
+  color: #1e266d;
+  line-height: 1.5;
+  font-size: 2.3rem;
+  font-weight: 700;
+}
+
+#bannerGuia img {
+  max-width: 550px;
+}
+
+.guia h2 {
+  font-size: 3.6rem;
+  color: var(--color-blue);
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+.guia .imagem-exemplo-contraste {
+  width: 400px;
+  height: 140px;
+  float: right;
+}
+
+.guia .imagem-exemplo-formulario {
+  width: 195px;
+  height: 195px;
+  float: right;
+}
+
+.guia ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 10rem 8rem 14rem;
+  font-size: 2.3rem;
+}
+
+.guia ul li {
+  list-style-type: disc !important;
+  margin-bottom: 15px;
+  line-height: 1.5;
+}
+
 .orientacoes {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3570,6 +3656,21 @@ main.contato figure img {
   }
   .highlight {
     background: none !important;
+  }
+  #bannerGuia {
+    text-align: center;
+  }
+  #bannerGuia p {
+    font-size: 22px !important;
+  }
+  #bannerGuia img {
+    display: none;
+  }
+  .guia img {
+    display: none;
+  }
+  .guia ul {
+    margin: 0rem 4rem 8rem 4rem;
   }
 }
 
