--- a/Views/contato.hbs
+++ b/Views/contato.hbs
@@ -5,83 +5,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
     <link rel="stylesheet" href="/CSS/theme.css">
     <title>Contato</title>
 </head>
 
 
 <body>
-{{!-- skip links --}}
-<ul class="skip-links">
-    <li><a href="#menu">Pular para menu</a></li>
-    <li><a href="#conteudo">Pular para conteúdo</a></li>
-    <li><a href="#footer">Pular para rodapé</a></li>
-</ul>
-{{!-- / skip links --}}
+    {{!-- skip links --}}
+    <ul class="skip-links">
+        <li><a href="#menu">Pular para menu</a></li>
+        <li><a href="#conteudo">Pular para conteúdo</a></li>
+        <li><a href="#footer">Pular para rodapé</a></li>
+    </ul>
+    {{!-- / skip links --}}
 
-{{!-- header --}}
-<header id="headerHome">
-    <div class="container">
+    {{!-- header --}}
+    <header id="headerHome" class="bg-none">
+        <div class="container">
 
-        {{!-- navbar --}}
-        <nav class="main-nav" aria-label="Navegação principal">
-            <div class="logo">
-                <a href="/" title="Página inicial"><img src="Imagens/logo-ally.svg" alt="Logo Ally"></a>
-            </div>
-
-            {{!-- menu --}}
-            <div class="menu-section">
-
-                <button class="menu-toggle" aria-expanded="false">Menu</button>
-
-                <ul id="menu">
-                    <li><a href="/about">Sobre nós</a></li>
-                    <li><a href="/contato">Contato</a></li>
-                    <li><a class="highlight" href="/tester">Seja pago para testar</a></li>
-                </ul>
-
-                <div class="account">
-                    <a class="btn-login" href="/users/login">Entrar</a>
-                    <a class="btn-register" href="/users/register">Criar conta</a>
+            {{!-- navbar --}}
+            <nav class="main-nav" aria-label="Navegação principal">
+                <div class="logo">
+                    <a href="/" title="Página inicial"><img src="Imagens/logo-ally.svg" alt="Logo Ally"></a>
                 </div>
 
-            </div>
-            {{!-- / menu --}}
+                {{!-- menu --}}
+                <div class="menu-section">
 
-        </nav>
-        {{!-- / navbar --}}
+                    <button class="menu-toggle" aria-expanded="false">Menu</button>
 
+                    <ul id="menu">
+                        <li><a href="/about">Sobre nós</a></li>
+                        <li><a href="/contato">Contato</a></li>
+                        <li><a class="highlight" href="/tester">Seja pago para testar</a></li>
+                    </ul>
 
-</header>
-{{!-- / header --}}
-<main id="conteudo" class="contato">
-    <section>
-        <h1>Entre em Contato</h1>
-        <form action="/contato" method="POST">
-            <div>
-                <label for="nome">Nome</label>
-                <input type="text" placeholder="Como você quer ser chamado?" name="nome" id="nomeContato">
-            </div>
-            <div>
-                <label for="email">Email</label>
-                <input type="email" name="email" placeholder="Insira seu email" id="emailContato">
-            </div>
-            <div>
-                <label for="mensagem">Mensagem</label>
-                <textarea name="mensagem" id="mensagemContato" placeholder="Escreva sua mensagem que quer nos enviar"
-                    cols="30" rows="10"></textarea>
-            </div>
-            <input type="submit" value="Enviar">
-        </form>
-    </section>
-    <figure>
-        <img src="/Imagens/Contato.svg" alt="Ilustração de contato">
-    </figure>
+                    <div class="account">
+                        <a class="btn-login" href="/users/login">Entrar</a>
+                        <a class="btn-register" href="/users/register">Criar conta</a>
+                    </div>
 
-</main>
+                </div>
+                {{!-- / menu --}}
 
-<script src="/Javascript/contato.js">
+            </nav>
+            {{!-- / navbar --}}
+        </div>
 
-</script>
-{{> _footer}}
+    </header>
+    {{!-- / header --}}
+    <main id="conteudo" class="contato">
+        <section>
+            <h1>Entre em Contato</h1>
+            <form action="/contato" method="POST">
+                <div>
+                    <label for="nomeContato">Nome</label>
+                    <input type="text" placeholder="Como você quer ser chamado?" name="nome" id="nomeContato">
+                </div>
+                <div>
+                    <label for="emailContato">Email</label>
+                    <input type="email" name="email" placeholder="Insira seu email" id="emailContato">
+                </div>
+                <div>
+                    <label for="mensagemContato">Mensagem</label>
+                    <textarea name="mensagem" id="mensagemContato"
+                        placeholder="Escreva sua mensagem que quer nos enviar" cols="30" rows="10"></textarea>
+                </div>
+                <label for="enviar">Enviar Mensagem</label>
+                <input id="enviar" type="submit" value="Enviar">
+            </form>
+        </section>
+        <figure>
+            <img src="/Imagens/Contato.svg" alt="Ilustração de contato" aria-hidden="true">
+        </figure>
+
+    </main>
+
+    <script src="/Javascript/contato.js">
+
+    </script>
+    {{> _footer}}
