Tirando aria-label desnecessario

--- a/Views/homepage.hbs
+++ b/Views/homepage.hbs
@@ -123,7 +123,7 @@
             <p data-aos="fade-up" data-aos-duration="1200" class="subtitle">Selecionamos 4 motivos para começar a testar com a gente</p>
             <div class="itens-motivos" data-aos="fade-up" data-aos-duration="1200">
                 <div class="item" >
-                    <span aria-label="Motivo 1">1</span>
+                    <span>1</span>
                     <h3>Conformidade com a lei</h3>
                     <p>A acessibilidade nos sites é obrigatória para organizações públicas e privadas, conforme a
                         Lei
@@ -131,7 +131,7 @@
                         de Inclusão. Mantenha-se protegido de processos judiciais.</p>
                 </div>
                 <div class="item">
-                    <span aria-label="Motivo 2">2</span>
+                    <span>2</span>
                     <h3>Expansão de público</h3>
                     <p>A acessibilidade nos sites é obrigatória para organizações públicas e privadas, conforme a
                         Lei
@@ -139,14 +139,14 @@
                         de Inclusão. Mantenha-se protegido de processos judiciais.</p>
                 </div>
                 <div class="item">
-                    <span aria-label="Motivo 3">3</span>
+                    <span>3</span>
                     <h3>Maior visibilidade</h3>
                     <p>A acessibilidade afeta a visibilidade do seu site em páginas de busca e auxilia na otimização
                         de
                         mecanismos de pesquisa (SEO) </p>
                 </div>
                 <div class="item">
-                    <span aria-label="Motivo 4">4</span>
+                    <span>4</span>
                     <h3>Responsabilidade Social</h3>
                     <p>Quando você torna seu site acessível, você defende que, de outra forma, aqueles que seriam
                         excluídos
