Atualizando login e criar a conta

--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -33,8 +33,8 @@
                 <h1>Entrar</h1>
                 <form action="/users/login" method="POST">
                     <div class="campo">
-                        <label for="username">Nome do Usuário</label>
-                        <input id="username" type="text" name='username' placeholder="Insira seu username">
+                        <label for="email">Email:</label>
+                        <input id="email" type="email" name='email' placeholder="Insira seu email">
                     </div>
                     <div class="campo">
 
