--- a/Views/homepage.hbs
+++ b/Views/homepage.hbs
@@ -110,7 +110,7 @@
         <div class="container">
             <h2>Por onde começar a aplicar acessibilidade no meu site?</h2>
             <p>Separamos algumas dicas de como começar a <br>implantar acessibilidade Web</p>
-            <a class="btn-orientacoes" href="/guia">Quero saber por onde começar</a>
+            <a class="btn-orientacoes" href="/guia">Ir para guia de dicas</a>
         </div>
     </section>
     {{!-- / por onde começar --}}
