--- a/Views/landingTester.hbs
+++ b/Views/landingTester.hbs
@@ -22,7 +22,7 @@
         {{!-- navbar --}}
         <nav class="main-nav" aria-label="Navegação principal">
             <div class="logo">
-                <a href="/" title="Página inicial"><img src="Imagens/logo-ally.svg" alt="Logo Ally"></a>
+                <a href="/" title="Página inicial"><img src="Imagens/logo-ally.svg" alt="Logo escrito Ally em caixa baixa, com um circulo rosa próximo a letra A e outro círculo azul acima da letra Y"></a>
             </div>
 
             {{!-- menu --}}
@@ -104,20 +104,18 @@
                 <div class="depoimento">
                     <img src="Imagens/carol.svg" alt="...">
                     <h3>Carolina Medeiros</h3>
-                    <p>Completely beautiful website and amazing support! This is my second website from this author.</p>
+                    <p>É ótima maneira de conseguir uma remuneração extra e não precisa ser tester profissional para realizar os testes. Muito legal!</p>
                 </div>
 
                 <div class="depoimento">
                     <img src="Imagens/leo.svg" alt="...">
                     <h3>Leonardo França</h3>
-                    <p>Really easy to use and customize. easy to understand. Darinka helped me with my site! She answers
-                        very quickly, a good service! Thank you very much!</p>
+                    <p>É muito gratificante poder mostrar como navego nos sites, assim as pessoas conseguem ver como as barreiras de acessibilidade prejudicam nossa experiência</p>
                 </div>
                 <div class="depoimento">
                     <img src="Imagens/olivia.svg" alt="...">
                     <h3>Olívia Canazzo</h3>
-                    <p>Really pleasing to look at, doc (including installation instructions) are clear and
-                        that is coming from a relatively new WordPress user.</p>
+                    <p>A plataforma é bem intuítiva e fácil de navegar. Indico para quem quer uma renda adicional e poder mostrar nossa perspectiva na Web</p>
                 </div>
             </div>
         </div>
