--- a/Views/contato.hbs
+++ b/Views/contato.hbs
@@ -36,7 +36,6 @@
                     <button class="menu-toggle" aria-expanded="false">Menu</button>
 
                     <ul id="menu">
-                        <li><a href="/about">Sobre nós</a></li>
                         <li><a href="/contato">Contato</a></li>
                         <li><a class="highlight" href="/tester">Seja pago para testar</a></li>
                     </ul>
@@ -72,7 +71,7 @@
                     <textarea name="mensagem" id="mensagemContato"
                         placeholder="Escreva sua mensagem que quer nos enviar" cols="30" rows="10"></textarea>
                 </div>
-                <label for="enviar">Enviar Mensagem</label>
+                <label for="enviar" class="sr-only">Enviar Mensagem</label>
                 <input id="enviar" type="submit" value="Enviar">
             </form>
         </section>
@@ -85,4 +84,5 @@
     <script src="/Javascript/contato.js">
 
     </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"></script>
     {{> _footer}}
